# api/public/api.yaml
@@ -226,6 +226,9 @@ paths:
         - in: query
           name: price
           description: Le tarif journalier
+        - in: query
+          name: password
+          description: Le nouveau mot de passe de l'utilisateur
       responses:
         200:
           description: L'utilisateur a été supprimé
@@ -345,7 +348,6 @@ paths:
         - in: query
           name: vaccines
           description: Les vaccins de l'animal
-          required: true
         - in: query
           name: isAllergies
           description: booléen indiquant si l'animal a des allergies
